# my-kitchen-accountant

./: README.md
backend/: README.md  main.py  pyproject.toml  setup.py
backend/api/: models.py  routers.py
backend/api/models/: ingredients.py  recipes.py
backend/api/routers/: ingredients.py  recipes.py
backend/core/: config.py
backend/db/: connection.py  init_db.py  lookups.py  schema.sql  seeds.sql  update.py
backend/schemas/: recipes.py
backend/scraping/: models.py  scraper.py
backend/services/: base.py  brands.py  ingredients.py  recipes.py  shops.py  units.py
